--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "keboola/my-component",
-    "description": "MyComponent description",
+    "name": "keboola/ex-azure-cost-management",
+    "description": "Exports data from the Azure Cost Management APIs. ",
     "license": "MIT",
     "require": {
         "php": "^7.4",
@@ -9,7 +9,7 @@
     "require-dev": {
         "php-parallel-lint/php-parallel-lint": "^1.2",
         "keboola/coding-standard": ">=7.0.2",
-        "keboola/datadir-tests": "^4.0",
+        "keboola/datadir-tests": "^5.2",
         "keboola/php-temp": "^2.0",
         "phpstan/phpstan": "^0.12.14",
         "phpunit/phpunit": "^9.0",
@@ -17,13 +17,13 @@
     },
     "autoload": {
         "psr-4": {
-            "MyComponent\\": "src/"
+            "AzureCostExtractor\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "MyComponent\\Tests\\": "tests/phpunit/",
-            "MyComponent\\FunctionalTests\\": "tests/functional/"
+            "AzureCostExtractor\\Tests\\": "tests/phpunit/",
+            "AzureCostExtractor\\FunctionalTests\\": "tests/functional/"
         }
     },
     "scripts": {
