--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "license": "MIT",
     "require": {
         "php": "^7.4",
-        "keboola/php-component": "^8.1"
+        "keboola/php-component": "^8.1",
+        "league/oauth2-client": "^2.6"
     },
     "require-dev": {
         "php-parallel-lint/php-parallel-lint": "^1.2",
