--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,10 @@ services:
     volumes:
       - ./:/code
       - ./data:/data
+    environment:
+      - OAUTH_APP_NAME
+      - OAUTH_APP_ID
+      - OAUTH_APP_SECRET
+      - OAUTH_ACCESS_TOKEN
+      - OAUTH_REFRESH_TOKEN
+      - TEST_SUBSCRIPTION_ID
