--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "ext-json": "*",
         "guzzlehttp/guzzle": "^7.2",
         "keboola/php-component": "^8.1",
+        "keboola/retry": "^0.5.0",
         "league/oauth2-client": "^2.6"
     },
     "require-dev": {
