--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "php": "^7.4",
         "ext-json": "*",
         "guzzlehttp/guzzle": "^7.2",
+        "keboola/csv": "^2.2",
         "keboola/php-component": "^8.1",
         "keboola/retry": "^0.5.0",
         "league/oauth2-client": "^2.6"
