--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_script:
   - export APP_IMAGE=keboola-component
   - docker -v
   - docker build -t $APP_IMAGE .
-  #- docker run -e OAUTH_APP_NAME -e OAUTH_APP_ID -e OAUTH_APP_SECRET -e OAUTH_ACCESS_TOKEN -e OAUTH_REFRESH_TOKEN -e TEST_SUBSCRIPTION_ID $APP_IMAGE composer ci
+  - docker run -e OAUTH_APP_NAME -e OAUTH_APP_ID -e OAUTH_APP_SECRET -e OAUTH_ACCESS_TOKEN -e OAUTH_REFRESH_TOKEN -e TEST_SUBSCRIPTION_ID $APP_IMAGE composer ci
 
   # push test image to ECR
   - docker pull quay.io/keboola/developer-portal-cli-v2:latest
@@ -22,7 +22,7 @@ before_script:
 
 script:
   # run test job inside KBC
-  # - docker run --rm -e KBC_STORAGE_TOKEN quay.io/keboola/syrup-cli:latest run-job $KBC_DEVELOPERPORTAL_APP $KBC_APP_TEST_CONFIG_ID test
+  - docker run --rm -e KBC_STORAGE_TOKEN quay.io/keboola/syrup-cli:latest run-job $KBC_DEVELOPERPORTAL_APP $KBC_APP_TEST_CONFIG_ID test
 
 deploy:
   provider: script
