User can log in using service principal

--- a/.env.dist
+++ b/.env.dist
@@ -3,4 +3,7 @@ OAUTH_APP_ID=
 OAUTH_APP_SECRET=
 OAUTH_ACCESS_TOKEN=
 OAUTH_REFRESH_TOKEN=
+SERVICE_PRINCIPAL_TENANT=
+SERVICE_PRINCIPAL_USERNAME=
+SERVICE_PRINCIPAL_PASSWORD=
 TEST_SUBSCRIPTION_ID=
