--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,6 @@ script:
 deploy:
   provider: script
   skip_cleanup: true
-  script: ./deploy.sh
+  script: ./deployMultiple.sh
   on:
     tags: true
